refactor: update item sort button UI, optimize sort logic, and enhance tooltip handling for spawner management